syntax = "proto3";
package testdata;

import "gogoproto/gogo.proto";
import "testdata.proto";

option go_package = "github.com/cosmos/cosmos-sdk/testutil/testdata";

// Msg tests the Protobuf message service as defined in
// https://github.com/cosmos/cosmos-sdk/issues/7500.
service Msg {
  rpc CreateDog(MsgCreateDog) returns (MsgCreateDogResponse);
}

message MsgCreateDog {
  testdata.Dog dog = 1;
}

message MsgCreateDogResponse {
  string name = 1;
}

// TestMsg is msg type for testing protobuf message using any, as defined in
// https://github.com/cosmos/cosmos-sdk/issues/6213.
message TestMsg {
  option (gogoproto.goproto_getters) = false;
  repeated string signers            = 1;
}
